force-app/main/default/objects/MD_Account_Partner__c/MD_Account_Partner__c.object-meta.xml
<CustomObject>
    <label>Account Partner</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Partner Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>