force-app/main/default/objects/MD_Account_Partner__c/fields/Enterprise_Account__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enterprise Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Partners (Enterprise Account)</relationshipLabel>
    <relationshipName>Account_Partners2</relationshipName>
    <type>Lookup</type>
</CustomField>