force-app/main/default/objects/MD_Account_Partner__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Partners (Parent Account)</relationshipLabel>
    <relationshipName>Account_Partners1</relationshipName>
    <type>Lookup</type>
</CustomField>