force-app/main/default/objects/MD_Account_Partner__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Partners</relationshipLabel>
    <relationshipName>Account_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>