force-app/main/default/objects/MD_Account_Partner__c/fields/Partner_Account_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_SAP_Number__c</fullName>
    <label>Partner Account SAP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>