force-app/main/default/objects/MD_Account_Partner__c/fields/Partner_Account_with_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_with_SAP_Number__c</fullName>
    <formula>Partner_Account__r.Name &amp;&apos; - &apos; &amp;  Partner_Account_SAP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Account with SAP Number</label>
    <type>Text</type>
</CustomField>