force-app/main/default/objects/MD_Account_Partner__c/fields/Partner_Function__c.field-meta.xml
<CustomField>
    <fullName>Partner_Function__c</fullName>
    <label>Partner Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AG_Sold-To</fullName>
                <label>AG Sold-To</label>
            </value>
            <value>
                <fullName>WE_Ship-To</fullName>
                <label>WE Ship-To</label>
            </value>
            <value>
                <fullName>RE_Bill-To</fullName>
                <label>RE Bill-To</label>
            </value>
            <value>
                <fullName>RG_Payer</fullName>
                <label>RG Payer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>