force-app/main/default/objects/MD_Account_Partner__c/fields/Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area__c</fullName>
    <label>Sales Area</label>
    <referenceTo>MD_Sales_Area__c</referenceTo>
    <relationshipLabel>Account Partners</relationshipLabel>
    <relationshipName>Account_Partners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>