force-app/main/default/objects/MD_Account_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Account__c</columns>
    <columns>Partner_Function__c</columns>
    <columns>Partner_Account_SAP_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>